--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,3 +10,12 @@ services:
       - '/app/node_modules'
     ports:
       - 3000:3000
+
+  backend:
+    build:
+      context: ../packages/backend/
+      dockerfile: Dockerfile
+    volumes:
+      - '/app/node_modules'
+    ports: 
+      - 3001:3000
