--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -13,6 +13,9 @@
     "@neutrinojs/airbnb-base": "^9.0.0-rc.5",
     "@neutrinojs/mocha": "^9.0.0-rc.5",
     "@neutrinojs/node": "^9.0.0-rc.5",
+    "@types/body-parser": "^1.17.1",
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.2",
     "@types/mocha": "^5.2.7",
     "@types/webpack-env": "^1.14.1",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
@@ -24,5 +27,10 @@
     "typescript": "^3.7.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
   }
 }
