--- a/packages/frontend/tsconfig.json
+++ b/packages/frontend/tsconfig.json
@@ -8,6 +8,8 @@
     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": ".",
+    "jsx": "react",
+    "allowJs": true,
   },
   "include": [
     "src/**/*"
