--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "tsc --noEmit && eslint --cache --fix --format codeframe --ext js,jsx,ts,tsx ./src/**/*"
   },
   "dependencies": {
+    "apollo-fetch": "^0.7.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
