--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -17,6 +17,7 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/mocha": "^5.2.7",
+    "@types/node-fetch": "^2.5.4",
     "@types/webpack-env": "^1.14.1",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
