--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-babel": "^5.3.0",
     "mocha": "^6.2.2",
     "neutrino": "^9.0.0-rc.5",
+    "serialize-javascript": "^2.1.2",
     "typescript": "^3.7.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
