backend neo4j docker integration

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -35,9 +35,9 @@ services:
     ports: 
       - 3001:3001
     environment: 
-      DB_HOST: ${DB_HOST}
-      DB_PORT: ${DB_PORT}
+      DB_HOST: bolt://db
+      DB_PORT: 7687
       DB_USERNAME: ${DB_USERNAME}
       DB_PASSWORD: ${DB_PASSWORD}
-    links:
+    depends_on:
      - db
