--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,16 +16,15 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.7.4",
-    "@neutrinojs/airbnb": "^9.0.0-rc.5",
-    "@neutrinojs/jest": "^9.0.0-rc.5",
-    "@neutrinojs/react": "^9.0.0-rc.5",
-    "@types/react": "^16.9.15",
+    "@neutrinojs/airbnb": "^9.0.0",
+    "@neutrinojs/jest": "^9.0.0",
+    "@neutrinojs/react": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
-    "eslint": "^6.7.0",
+    "@types/react": "^16.9.15",
+    "eslint": "^6.7.2",
     "jest": "^24.9.0",
-    "neutrino": "^9.0.0-rc.5",
-    "serialize-javascript": "^2.1.2",
+    "neutrino": "^9.0.0",
     "typescript": "^3.7.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
