--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -8,8 +8,9 @@
     "lint": "tsc --noEmit && eslint --cache --fix --format codeframe --ext js,jsx,ts,tsx ./src/**/*"
   },
   "dependencies": {
-    "apollo-fetch": "^0.7.0",
-    "prop-types": "^15.7.2",
+    "@apollo/react-hooks": "^3.1.3",
+    "apollo-boost": "^0.4.7",
+    "graphql": "^14.5.8",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.18"
