--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "main": "build/index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "jest",
     "start": "webpack --watch --mode development",
     "build": "webpack --mode production",
     "lint": "tsc --noEmit && eslint --cache --format codeframe --ext ts src/**/*"
@@ -10,21 +10,21 @@
   "module": "src/index.js",
   "devDependencies": {
     "@babel/preset-typescript": "^7.7.4",
-    "@neutrinojs/airbnb-base": "^9.0.0-rc.5",
-    "@neutrinojs/mocha": "^9.0.0-rc.5",
-    "@neutrinojs/node": "^9.0.0-rc.5",
+    "@neutrinojs/airbnb-base": "^9.0.0",
+    "@neutrinojs/jest": "^9.0.0",
+    "@neutrinojs/node": "^9.0.0",
     "@types/body-parser": "^1.17.1",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
-    "@types/mocha": "^5.2.7",
+    "@types/jest": "^24.0.23",
     "@types/node-fetch": "^2.5.4",
     "@types/webpack-env": "^1.14.1",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "eslint": "^6.7.2",
     "eslint-plugin-babel": "^5.3.0",
-    "mocha": "^6.2.2",
-    "neutrino": "^9.0.0-rc.5",
+    "jest": "^24.9.0",
+    "neutrino": "^9.0.0",
     "serialize-javascript": "^2.1.2",
     "typescript": "^3.7.3",
     "webpack": "^4.41.2",
