--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -20,9 +20,10 @@
     "@neutrinojs/airbnb": "^9.0.0",
     "@neutrinojs/jest": "^9.0.0",
     "@neutrinojs/react": "^9.0.0",
+    "@types/jest": "^24.0.23",
+    "@types/react": "^16.9.15",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
-    "@types/react": "^16.9.15",
     "eslint": "^6.7.2",
     "jest": "^24.9.0",
     "neutrino": "^9.0.0",
