--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -13,7 +13,9 @@
     "graphql": "^14.5.8",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-hot-loader": "^4.12.18"
+    "react-hot-loader": "^4.12.18",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.7.4",
@@ -22,6 +24,7 @@
     "@neutrinojs/react": "^9.0.0",
     "@types/jest": "^24.0.23",
     "@types/react": "^16.9.15",
+    "@types/react-redux": "^7.1.5",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "eslint": "^6.7.2",
