--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -29,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "eslint": "^6.7.2",
+    "graphql-tag": "^2.10.1",
     "jest": "^24.9.0",
     "neutrino": "^9.0.0",
     "typescript": "^3.7.3",
