--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -5,7 +5,7 @@
     "test": "jest",
     "start": "webpack-dev-server --host 0.0.0.0 --port 3000 --mode development --open",
     "build": "webpack --mode production",
-    "lint": "tsc --noEmit && eslint --cache --fix --format codeframe --ext js,jsx,ts,tsx ./src/**/*"
+    "lint": "tsc --noEmit && eslint --cache --fix --format codeframe --ext js,jsx,ts,tsx,graphql ./src/**/*"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
@@ -29,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "eslint": "^6.7.2",
+    "eslint-plugin-graphql": "^3.1.1",
     "graphql-tag": "^2.10.1",
     "jest": "^24.9.0",
     "neutrino": "^9.0.0",
