--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -28,11 +28,15 @@
     "@types/react-redux": "^7.1.5",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
+    "autoprefixer": "^9.7.3",
     "eslint": "^6.7.2",
     "eslint-plugin-graphql": "^3.1.1",
     "graphql-tag": "^2.10.1",
     "jest": "^24.9.0",
     "neutrino": "^9.0.0",
+    "node-sass": "^4.13.0",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^8.0.1",
     "typescript": "^3.7.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
