--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -5,10 +5,11 @@
     "test": "jest",
     "start": "webpack-dev-server --host 0.0.0.0 --port 3000 --mode development --open",
     "build": "webpack --mode production",
-    "lint": "tsc --noEmit && eslint --cache --fix --format codeframe --ext js,jsx,ts,tsx,graphql ./src/**/*"
+    "lint": "tsc --noEmit && eslint --cache --fix --format codeframe --ext js,jsx,ts,tsx,graphql --ignore-pattern *.scss ./src/**/*"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@material-ui/core": "^4.8.3",
     "apollo-boost": "^0.4.7",
     "graphql": "^14.5.8",
     "react": "^16.12.0",
