--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.18",
     "react-redux": "^7.1.3",
+    "react-router": "^5.1.2",
     "redux": "^4.0.5"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "@types/jest": "^24.0.23",
     "@types/react": "^16.9.15",
     "@types/react-redux": "^7.1.5",
+    "@types/react-router": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "autoprefixer": "^9.7.3",
