--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,9 +16,7 @@
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.18",
-    "react-redux": "^7.1.3",
-    "react-router": "^5.1.2",
-    "redux": "^4.0.5"
+    "react-router": "^5.1.2"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.7.4",
