--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,7 +16,8 @@
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.18",
-    "react-router": "^5.1.2"
+    "react-router": "^5.1.2",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.7.4",
@@ -27,6 +28,7 @@
     "@types/react": "^16.9.15",
     "@types/react-redux": "^7.1.5",
     "@types/react-router": "^5.1.3",
+    "@types/uuid": "^7.0.2",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "autoprefixer": "^9.7.3",
